# Tesla

./: .flake8  Pipfile  README.md  create_log_file.py  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  temp.py
.cursor/agents/: backend-developer.md  frontend-developer.md  task-coordinator.md
Tesla/: admin.py  renderer.py  settings.py  urls.py
account/: admin.py  models.py  serializers.py  urls.py  views.py
api_framework/: confest.py  main.py  pytest.ini
apiframetest/: conftest.py  main_by_django.py  pytest.ini  run.py
apiframetest/commons/: ddt_util.py  (+5 more)
backend/: .env.example  Dockerfile  entrypoint.sh  requirements.txt
beifan/: admin.py  apps.py  forms.py  models.py  serializers.py  tests.py  views.py
case_api/: models.py  serializers.py  urls.py  util.py  views.py
case_ui/: models.py  views.py
docs/: Suite和Result模块详细说明.md  Tesla_详细学习文档.md  Tesla_面试介绍文档.md  Tesla项目完整说明文档.md  前后端数据格式对接修复说明.md  完整功能说明文档.md  完整自测报告.md  快速开始指南.md  更新日志.md  最终交付文档_v1.0.1.md  最终完整交付文档_v1.0.2.md  测试报告.md  需求文档.md  项目交付总览.md  项目完成总结报告.md  项目总结.md  项目文档.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
nginx/: default.conf
project/: models.py  serializers.py  views.py
snippet/: customresponse.py  myexception.py  serializers.py  urls.py  views.py
static/: style.css
suite/: models.py  serializers.py  task.py  urls.py  views.py
system/: admin.py  models.py  serializers.py  urls.py  views.py
templates/: __init__.py
test_beifan/: test_yaml.yaml  to_yaml.py
tests/: conftest.py  debug.py
(+2079 files in other folders)
